# explainreduce

./: .gitignore  LICENSE  README.md  config.template  pyproject.toml  requirements.txt
examples/: 01_regression_autompg.ipynb
experiment/: coverage_epsilon_sensitivity.py  coverage_instability.py  example.py  greedy_comparison.py  k_sensitivity.py  project_paths.py  subsample_sensitivity.py
experiment/results/coverage_epsilon_sensitivity/: sensitivity_01.parquet  sensitivity_03.parquet  sensitivity_05.parquet  sensitivity_06.parquet  sensitivity_07.parquet  sensitivity_10.parquet
experiment/results/greedy_comparison/: greedy_comp_01.parquet  greedy_comp_04.parquet  greedy_comp_07.parquet  greedy_comp_08.parquet
experiment/scripts/: exp_greedy_comparison.sh  exp_k_sens.sh  exp_n_sens.sh  exp_reduction_methods.sh
experiment/utils/: coverage_epsilon_sensitivity.py  greedy_comparison.py  utils.py
experiments/: README.md  coverage_epsilon_sensitivity.py  coverage_instability.py  data.py  hyperparameters.py  jets_example.py  k_sensitivity.py  lambda_sensitivity.py  project_paths.py  subsample_sensitivity.py  synthetic_case_example.py
experiments/scripts/: exp_hyperparameters.sh  exp_lambda_sensitivity.sh  exp_sensitivity.sh
experiments/utils/: data.py  greedy_comparison.py  hyperparameters.py  utils.py
explainreduce/: localmodels.py  metrics.py  proxies.py  utils.py
ms/: global_comparison.tex  greedy_comparison.tex
reproduce/: k_sensitivity.py  subsample_sensitivity.py
reproduce/utils/: data.py  hyperparameters.py  utils.py
(+69 files in other folders)
