[project]
name = "summer2024"
version = "0.1.0"
description = "ExplainReduce experiments repo dependencies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deap>=1.4.3",
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "lime>=0.2.0.1",
    "logzero>=1.7.0",
    "lore-sa",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "openml>=0.15.1",
    "pandas>=2.3.2",
    "pulp>=3.2.2",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "scikit-optimize>=0.10.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "slise>=2.2.4",
    "slisemap>=1.6.2",
    "tensorflow>=2.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]

[tool.uv.sources]
lore-sa = { git = "https://github.com/kdd-lab/LORE_sa.git" }
